--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,10 @@ dependencies {
             'com.codeborne:selenide:6.7.3',
             'org.assertj:assertj-core:3.23.1',
             'com.codeborne:pdf-test:1.7.0',
-            'com.codeborne:xls-test:1.4.3',
+            'com.codeborne:xls-test:1.5.0',
             'com.opencsv:opencsv:5.6',
-            'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+            'com.fasterxml.jackson.core:jackson-databind:2.13.1',
+            'org.apache.poi:poi:3.9'
     )
 }
 
